# cline-devops

./: .gitignore  CONTRIBUTING.md  LICENSE  PERPLEXITY_AI.md  README.md  pyproject.toml
.github/workflows/: sync-to-projects.yml  validate-rules.yml
docs/: getting-started.md
integrations/vscode/: extensions.json  settings.json
mcp-servers/: registry.json
research/benchmarks/: model-comparison-template.csv
research/experiments/: plan-mode-vs-act-mode.md
rules/global/: .copilot-instructions.md
rules/task-specific/: database-optimization.md  reverse-engineering.md
workflows/scripts/: setup-project.sh  sync-rules.py
workflows/templates/: task-breakdown-template.md
